# Android-Guide-for-Blind

./: .gitignore  README.md  build.gradle  objects.txt  settings.gradle  复制池袋和配置文件README.md
app/: CMakeLists.txt  CMakeLists（复件）.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PARAconfig.yaml  PARAconfig_guid.yaml  备份单目PARAconfig.yaml  备份双目PARAconfig.yaml
app/src/main/cpp/: Frame.h  native-lib.cpp
app/src/main/cpp/ORB/include/: Converter.h  Frame.h  GeometricTools.h  System.h
app/src/main/cpp/ORB/src/: System.cc
app/src/main/cpp/astar/: Astar.cpp  Astar.h
app/src/main/cpp/boost/: boost
app/src/main/cpp/compat/: optional.hpp
app/src/main/cpp/stereo_image_proc/include/: processor.h
app/src/main/cpp/stereo_image_proc/src/: processor.cpp
app/src/main/java/com/vslam/orbslam3/vslamactivity/: DebugLogger.java  GoalPublisher.java  GridMapBuilder.java  GridMapManager.java  HeadingTTS.java  LocalPointCloudPublisher.java  MapServerManager.java  PathPlanningManager.java  PointCloudRenderer.java  RosConnection.java  RosManager.java  TrajectoryView.java  USBCameraManager.java  VslamActivity.java  VslamUIHelper.java
app/src/main/res/layout/: activity_vslam_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
image_pipeline-noetic/stereo_image_proc/include/stereo_image_proc/: processor.h
libuvccamera/: build.gradle
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/java/com/serenegiant/common/: BaseActivity.java
libuvccamera/src/main/java/com/serenegiant/usb/: USBMonitor.java
opencv/: build.gradle
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java
usbCameraCommon/: build.gradle
